--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -58,6 +58,52 @@ services:
     volumes:
       - dataenk-data:/var/lib/postgresql/data
   
+  followerserver:
+    build:
+      context: ./follower-microservice/follower-microservice/
+      dockerfile: Dockerfile
+    image: followerdocker
+    container_name: aplikacijafollower
+    restart: always
+    networks:
+      - followerserver
+    ports:
+      - 8089:8089
+    environment:
+      - PORT=8089
+      - NEO4J_DB=bolt://neo4j:7687
+      - NEO4J_USERNAME=neo4j
+      - NEO4J_PASS=Dejann03
+    depends_on:
+      neo4j:
+        condition: service_healthy
+
+  neo4j:
+    image: neo4j
+    container_name: neo4jfollower
+    restart: always
+    networks:
+      - followerserver
+    ports:
+      - "7687:7687"
+      - "7474:7474"
+      - "7473:7473"
+         # Docker healtcheck - checks if database is "alive"
+    healthcheck:
+      # test: [ "CMD-SHELL", "echo RETURN 1 | cypher-shell -a <NEO4J_dbms_connector_bolt_listen__address> -u <user defined username> -p <user defined password> || exit 1" ]
+      test:
+        [
+          "CMD-SHELL",
+          "echo RETURN 1 | cypher-shell -a bolt://neo4j:7687 -u neo4j -p Dejann03 || exit 1",
+        ]
+      interval: 5s
+      timeout: 5s
+      retries: 10 
+    environment:
+      - NEO4J_AUTH=neo4j/Dejann03
+    volumes:
+      - databasef-data:/data
+
   explorerv:
     build:
       dockerfile: Dockerfile
@@ -105,6 +151,8 @@ volumes:
     name: server-dataenk
   databasepsw-data:
     name: explorerv
+  databasef-data:
+    name: server-databasefollower
   
 
 networks:
@@ -116,5 +164,8 @@ networks:
     driver: bridge
   databasepsw:
     name: databasepsw
+    driver: bridge
+  followerserver:
+    name: followerserver
     driver: bridge
     
